// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component ArticleCard renders correctly 1`] = `
<DocumentFragment>
  .c2 {
  object-fit: cover;
  box-shadow: inset 0px 0px 1px 1px rgba(0,0,0,0.1);
  border-radius: 10px;
}

.c15 {
  font-family: "Alfa Slab One",serif;
  font-style: normal;
  font-weight: normal;
  font-size: 26px;
  line-height: 32px;
  -webkit-letter-spacing: 0.15px;
  -moz-letter-spacing: 0.15px;
  -ms-letter-spacing: 0.15px;
  letter-spacing: 0.15px;
}

.c16 {
  font-family: "Fira Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 24px;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
}

.c11 {
  font-family: "Fira Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 12px;
  line-height: 16px;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
}

.c1 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  width: 100%;
}

.c3 {
  width: 100%;
  height: 368px;
}

.c0 {
  display: grid;
  grid-gap: 8px;
}

.c6 {
  display: grid;
  grid-gap: 12px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-align-content: start;
  -ms-flex-line-pack: start;
  align-content: start;
}

.c17 {
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

.c5 {
  display: grid;
  grid-gap: 12px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-align-content: start;
  -ms-flex-line-pack: start;
  align-content: start;
}

.c4 {
  display: grid;
}

.c9 {
  color: var(--color-primary);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c14 {
  font-family: "Fira Sans",sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 10px;
  line-height: 16px;
  -webkit-letter-spacing: 1.5px;
  -moz-letter-spacing: 1.5px;
  -ms-letter-spacing: 1.5px;
  letter-spacing: 1.5px;
  text-transform: uppercase;
  text-transform: uppercase;
}

.c14::before {
  content: "#";
}

.c10 {
  font-family: "Fira Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 12px;
  line-height: 16px;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  text-transform: capitalize;
}

.c12 {
  color: var(--color-grey-700);
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c13 {
  display: grid;
  grid-auto-flow: column;
  grid-gap: 16px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

@media (min-width:564px) {
  .c15 {
    font-family: "Alfa Slab One",serif;
    font-style: normal;
    font-weight: normal;
    font-size: 33px;
    line-height: 40px;
    -webkit-letter-spacing: 0.15px;
    -moz-letter-spacing: 0.15px;
    -ms-letter-spacing: 0.15px;
    letter-spacing: 0.15px;
  }
}

@media (min-width:564px) {
  .c16 {
    font-family: "Fira Sans",sans-serif;
    font-style: normal;
    font-weight: normal;
    font-size: 18px;
    line-height: 28px;
    -webkit-letter-spacing: 0.5px;
    -moz-letter-spacing: 0.5px;
    -ms-letter-spacing: 0.5px;
    letter-spacing: 0.5px;
  }
}

@media (min-width:564px) {
  .c11 {
    font-family: "Fira Sans",sans-serif;
    font-style: normal;
    font-weight: normal;
    font-size: 14px;
    line-height: 16px;
    -webkit-letter-spacing: 0.4px;
    -moz-letter-spacing: 0.4px;
    -ms-letter-spacing: 0.4px;
    letter-spacing: 0.4px;
  }
}

@media (max-width:500px) {
  .c3 {
    height: 320px;
  }
}

@media (max-width:440px) {
  .c3 {
    height: 270px;
  }
}

@media (min-width:564px) {
  .c14 {
    font-family: "Fira Sans",sans-serif;
    font-style: normal;
    font-weight: 500;
    font-size: 12px;
    line-height: 16px;
    -webkit-letter-spacing: 1.5px;
    -moz-letter-spacing: 1.5px;
    -ms-letter-spacing: 1.5px;
    letter-spacing: 1.5px;
    text-transform: uppercase;
  }
}

@media (min-width:564px) {
  .c10 {
    font-family: "Fira Sans",sans-serif;
    font-style: normal;
    font-weight: normal;
    font-size: 14px;
    line-height: 16px;
    -webkit-letter-spacing: 0.4px;
    -moz-letter-spacing: 0.4px;
    -ms-letter-spacing: 0.4px;
    letter-spacing: 0.4px;
  }
}

<div
    class="c0"
  >
    <a
      class="c1"
      href="/big-sample-test"
    >
      <img
        alt="CoverImageAlt"
        class="c2 c3"
        src="5.jpg"
      />
    </a>
    <div
      class="c4"
    >
      <div
        class="c5"
      >
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <div
              class="c8"
            >
              <a
                class="c9 c10"
                href="/categories/moar"
              >
                moar
              </a>
              <p
                class="c11 c12"
              >
                 ⋅ Mar 1, 2018 ⋅ 3 min read
              </p>
            </div>
            <div
              class="c13"
            >
              <a
                class="c9 c14"
                href="/tags/test"
              >
                test
              </a>
              <a
                class="c9 c14"
                href="/tags/huge"
              >
                huge
              </a>
            </div>
          </div>
          <a
            class="c1"
            href="/big-sample-test"
          >
            <h3
              class="c15"
            >
              Big Test
            </h3>
          </a>
        </div>
        <a
          class="c1"
          href="/big-sample-test"
        >
          <p
            class="c16 c17"
          >
            MDX Test Here's a color picker! NOTE: This "post" is based on  Markdown Cheatsheet  and is meant to test styling of Markdown generated…
          </p>
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`component ArticleCard renders correctly as a hero card 1`] = `
<DocumentFragment>
  .c19 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c2 {
  object-fit: cover;
  box-shadow: inset 0px 0px 1px 1px rgba(0,0,0,0.1);
  border-radius: 10px;
}

.c15 {
  font-family: "Alfa Slab One",serif;
  font-style: normal;
  font-weight: normal;
  font-size: 26px;
  line-height: 32px;
  -webkit-letter-spacing: 0.15px;
  -moz-letter-spacing: 0.15px;
  -ms-letter-spacing: 0.15px;
  letter-spacing: 0.15px;
}

.c16 {
  font-family: "Fira Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 24px;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
}

.c11 {
  font-family: "Fira Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 12px;
  line-height: 16px;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
}

.c1 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  width: 100%;
}

.c3 {
  width: 100%;
  height: 368px;
}

.c0 {
  display: grid;
  grid-gap: 8px;
}

.c6 {
  display: grid;
  grid-gap: 12px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-align-content: start;
  -ms-flex-line-pack: start;
  align-content: start;
}

.c17 {
  display: -webkit-box;
  -webkit-line-clamp: 5;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

.c5 {
  display: grid;
  grid-gap: 12px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-align-content: start;
  -ms-flex-line-pack: start;
  align-content: start;
}

.c4 {
  display: grid;
}

.c18 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: var(--color-primary);
  font-family: "Fira Sans",sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 18px;
  line-height: 16px;
  -webkit-letter-spacing: 1.25px;
  -moz-letter-spacing: 1.25px;
  -ms-letter-spacing: 1.25px;
  letter-spacing: 1.25px;
  text-transform: uppercase;
  display: grid;
  grid-gap: 12px;
  grid-auto-flow: column;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  color: var(--color-primary);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c14 {
  font-family: "Fira Sans",sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 10px;
  line-height: 16px;
  -webkit-letter-spacing: 1.5px;
  -moz-letter-spacing: 1.5px;
  -ms-letter-spacing: 1.5px;
  letter-spacing: 1.5px;
  text-transform: uppercase;
  text-transform: uppercase;
}

.c14::before {
  content: "#";
}

.c10 {
  font-family: "Fira Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 12px;
  line-height: 16px;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  text-transform: capitalize;
}

.c12 {
  color: var(--color-grey-700);
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c13 {
  display: grid;
  grid-auto-flow: column;
  grid-gap: 16px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

@media (min-width:564px) {
  .c15 {
    font-family: "Alfa Slab One",serif;
    font-style: normal;
    font-weight: normal;
    font-size: 33px;
    line-height: 40px;
    -webkit-letter-spacing: 0.15px;
    -moz-letter-spacing: 0.15px;
    -ms-letter-spacing: 0.15px;
    letter-spacing: 0.15px;
  }
}

@media (min-width:564px) {
  .c16 {
    font-family: "Fira Sans",sans-serif;
    font-style: normal;
    font-weight: normal;
    font-size: 18px;
    line-height: 28px;
    -webkit-letter-spacing: 0.5px;
    -moz-letter-spacing: 0.5px;
    -ms-letter-spacing: 0.5px;
    letter-spacing: 0.5px;
  }
}

@media (min-width:564px) {
  .c11 {
    font-family: "Fira Sans",sans-serif;
    font-style: normal;
    font-weight: normal;
    font-size: 14px;
    line-height: 16px;
    -webkit-letter-spacing: 0.4px;
    -moz-letter-spacing: 0.4px;
    -ms-letter-spacing: 0.4px;
    letter-spacing: 0.4px;
  }
}

@media (max-width:500px) {
  .c3 {
    height: 320px;
  }
}

@media (max-width:440px) {
  .c3 {
    height: 270px;
  }
}

@media (min-width:1100px) {
  .c0 {
    grid-column: span 2;
    grid-template-columns: 6fr 4fr;
    grid-auto-flow: column;
    grid-gap: 32px;
  }
}

@media (min-width:1100px) {
  .c4 {
    -webkit-align-content: space-between;
    -ms-flex-line-pack: space-between;
    align-content: space-between;
  }
}

@media (max-width:1100px) {
  .c18 {
    display: none;
  }
}

@media (min-width:564px) {
  .c14 {
    font-family: "Fira Sans",sans-serif;
    font-style: normal;
    font-weight: 500;
    font-size: 12px;
    line-height: 16px;
    -webkit-letter-spacing: 1.5px;
    -moz-letter-spacing: 1.5px;
    -ms-letter-spacing: 1.5px;
    letter-spacing: 1.5px;
    text-transform: uppercase;
  }
}

@media (min-width:564px) {
  .c10 {
    font-family: "Fira Sans",sans-serif;
    font-style: normal;
    font-weight: normal;
    font-size: 14px;
    line-height: 16px;
    -webkit-letter-spacing: 0.4px;
    -moz-letter-spacing: 0.4px;
    -ms-letter-spacing: 0.4px;
    letter-spacing: 0.4px;
  }
}

<div
    class="c0"
  >
    <a
      class="c1"
      href="/big-sample-test"
    >
      <img
        alt="CoverImageAlt"
        class="c2 c3"
        src="5.jpg"
      />
    </a>
    <div
      class="c4"
    >
      <div
        class="c5"
      >
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <div
              class="c8"
            >
              <a
                class="c9 c10"
                href="/categories/moar"
              >
                moar
              </a>
              <p
                class="c11 c12"
              >
                 ⋅ Mar 1, 2018 ⋅ 3 min read
              </p>
            </div>
            <div
              class="c13"
            >
              <a
                class="c9 c14"
                href="/tags/test"
              >
                test
              </a>
              <a
                class="c9 c14"
                href="/tags/huge"
              >
                huge
              </a>
            </div>
          </div>
          <a
            class="c1"
            href="/big-sample-test"
          >
            <h3
              class="c15"
            >
              Big Test
            </h3>
          </a>
        </div>
        <a
          class="c1"
          href="/big-sample-test"
        >
          <p
            class="c16 c17"
          >
            MDX Test Here's a color picker! NOTE: This "post" is based on  Markdown Cheatsheet  and is meant to test styling of Markdown generated…
          </p>
        </a>
      </div>
      <a
        class="c18"
        href="/big-sample-test"
      >
        Read the article 
        <svg
          aria-hidden="true"
          class="c19"
          fill="currentColor"
          focusable="false"
          height="28"
          viewBox="0 0 24 24"
          width="28"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.002 3h-14c-1.103 0-2 .897-2 2v4h2V5h14v14h-14v-4h-2v4c0 1.103.897 2 2 2h14c1.103 0 2-.897 2-2V5c0-1.103-.898-2-2-2z"
          />
          <path
            d="M11 16l5-4-5-4v3.001H3v2h8z"
          />
        </svg>
      </a>
    </div>
  </div>
</DocumentFragment>
`;
